--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "eslint": "^8.55.0"
