--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
+    "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "uuid": "^9.0.1"
   },
