--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.0.3",
@@ -11,7 +14,11 @@
     "passport-local": "^1.0.0",
     "uuid": "^9.0.1"
   },
+  "scripts": {
+    "start": "node index.js"
+  },
   "devDependencies": {
     "eslint": "^8.55.0"
   }
 }
+
